test/parsing/ferguson/comment-test.good
comment-test.chpl:10: syntax error: end-of-file in comment
comment-test.chpl:6: note: unterminated comment here
